--- a/testdevice.html
+++ b/testdevice.html
@@ -66,29 +66,20 @@
 							<div class="panel-heading">
 								<h3 class="panel-title">Local Stream
 									<div class="btn-group btn-group-xs pull-right hide">
-										<!--button class="btn btn-danger" autocomplete="off" id="toggleaudio">Disable audio</button>
-										<button class="btn btn-danger" autocomplete="off" id="togglevideo">Disable video</button>
-										<div class="btn-group btn-group-xs">
-											<button id="bitrateset" autocomplete="off" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-												Bandwidth<span class="caret"></span>
-											</button>
-											<ul id="bitrate" class="dropdown-menu" role="menu">
-												<li><a href="#" id="0">No limit</a></li>
-												<li><a href="#" id="128">Cap to 128kbit</a></li>
-												<li><a href="#" id="256">Cap to 256kbit</a></li>
-												<li><a href="#" id="512">Cap to 512kbit</a></li>
-												<li><a href="#" id="1024">Cap to 1mbit</a></li>
-												<li><a href="#" id="1500">Cap to 1.5mbit</a></li>
-												<li><a href="#" id="2000">Cap to 2mbit</a></li>
-											</ul>
-										</div-->
 									</div>
 								</h3>
 							</div>
 							<div class="panel-body" id="videoleft"></div>
 						</div>
-					</div>
+					</div>				
 				</div>
+				<div class="row hide" id="operation">
+					<video></video>
+					<canvas></canvas>
+					<br/>
+					<button id="newphoto">Take A Photo</button>
+					<button id="download" disabled="disabled">Download Photo</button>	
+				</div>					
 			</div>
 		</div>
 	</div>
